axion-ui/Manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-ui  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-ui
  template:
    metadata:
      labels:
        app: axion-ui 
    spec:
      containers:
        - name: axion-uicontainer
          image: axion912345.azurecr.io/axion:latest
          ports:
            - containerPort: 80
